wrapped auth in if to prevent error when not signed in.

--- a/app/app.css
+++ b/app/app.css
@@ -1,11 +1,21 @@
 body {
   margin : auto;
-  background: #4A4A4A;
   padding-bottom : 50px;
+  max-width : 500px;
+}
+
+
+.messagescontainer{
+background-image: linear-gradient(-180deg, #545354 0%, #9B9B9B 100%);
+/*border: 1px solid #979797;*/
+border-radius: 8px;
+min-height: 70%;
+padding: 10px 5px 10px 5px;
+margin-bottom: 10px;
 }
 
 .mainContent{
-  max-width : 540px;
+  background: #4A4A4A;
   margin : auto;
   padding : 20px;
 }
@@ -113,14 +123,6 @@ color: #9B9B9B;
 text-align: center;
 }
 
-.messagescontainer{
-background-image: linear-gradient(-180deg, #545354 0%, #9B9B9B 100%);
-/*border: 1px solid #979797;*/
-border-radius: 8px;
-min-height: 70%;
-padding: 10px 5px 10px 5px;
-margin-bottom: 10px;
-}
 
 
 
